--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,6 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# Flask
-instance/*
-!instance/.gitkeep
-
 # VS Code
 .vscode/*
 !.vscode/settings.json
@@ -46,9 +42,50 @@ instance/*
 *.swp
 *.swo
 
-# Database
-app.db
+# Jupyter and notebook checkpoints
+.ipynb_checkpoints/
+*.ipynb
 
-# Specific to your project structure
-/OdontoClin.code-workspace
-/instance/app.db
+# Test, coverage, and profiling
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+.pyre/
+.mypy_cache/
+.pytype/
+
+# Logs
+*.log
+
+# Local dev tools
+*.DS_Store
+*.idea/
+*.iml
+
+# System files
+Thumbs.db
+.DS_Store
+
+legacy/
+node_modules/
+
+# Ignore all extension config files
+*.sublime*
+*.vscode*
+*.idea*
+*.iml
+*.editorconfig
+*.eslintrc*
+*.prettierrc*
+*.pylintrc
+*.flake8
+*.envrc
+lint.py
