--- a/.jshintrc
+++ b/.jshintrc
@@ -1,12 +1,35 @@
 {
+    "asi": false,
+    "expr": true,
+    "indent": 4,
+    "lookup": false,
+    "maxerr": 100,
+    "predef": [
+        "$",
+        "document",
+        "window",
+        "console",
+        "jQuery",
+        "alert",
+        "fabric",
+        "event",
+        "FileReader",
+        "FormData",
+        "Image",
+        "ActiveXObject",
+        "XMLHttpRequest",
+        "localStorage",
+        "setTimeout",
+        "setInterval",
+        "clearInterval",
+        "URL",
+        "Blob",
+        "navigator",
+        "CustomEvent"
+    ],
+    "undef": true,
+    "unused": true,
     "browser": true,
-    "esversion": 9,
-    "globals": {
-        "bootstrap": true,
-        "planoData": true,
-        "odontograma": true
-    },
-    "loopfunc": true,
-    "asi": true,
-    "laxbreak": true
+    "jquery": true,
+    "esversion": 6
 }
