--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,4 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
-skip_glob = ["*/migrations/*", "*/venv/*", "*/env/*"]
+skip_glob = ["*/venv/*", "*/env/*"]
