--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Flask==2.3.3
 Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
 WTForms==3.1.1
 markupsafe==2.1.5
 email-validator
 requests
+Flask-Mobility==1.1.0
