--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__/
 *.pyd
 .Python
 venv/
+.venv/
+.ruff_cache/
 env/
 ENV/
 .env
@@ -28,6 +30,7 @@ MANIFEST
 
 # VS Code
 .vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -85,6 +88,7 @@ Thumbs.db
 .DS_Store
 
 # Model cache and AI-related temporary files
+models_cache/
 models_cache/downloads/
 models_cache/temp/
 *.tmp
